<resources>
    <string name="action_atmosphere">Atmosphere</string>
    <string name="action_biomes">Biomes</string>
    <string name="action_delete">Delete</string>
    <string name="action_help">Help</string>
    <string name="action_load">Load</string>
    <string name="action_new">New</string>
    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="action_topography">Topography</string>
    <string name="add">Add</string>
    <string name="app_name">Kerbal Space App</string>
    <string name="average">Average</string>
    <string name="best_case">Best case</string>
    <string name="cancel">Cancel</string>
    <string name="celestial_body">Celestial Body</string>
    <string name="celestial_moon">Moon</string>
    <string name="clearance">Surface Clearance</string>
    <string name="destination_add">New Destination</string>
    <string name="destination_cancel">New Destination</string>
    <string name="destination_title">New Destination</string>
    <string name="dismiss">Dismiss</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="efficient">Efficient</string>
    <string name="help">Help</string>
    <string name="inclination_efficiency">Inclination Efficiency</string>
    <string name="inefficient">Inefficient</string>
    <string name="land">Land?</string>
    <string name="landing_site">Landing site</string>
    <string name="orbit">Orbit</string>
    <string name="planet">planet</string>
    <string name="safety_margins">ΔV Safety Margins</string>
    <string name="title_activity_mission_planner">Mission Planner</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_missionDestination">Pick destination</string>
    <string name="total_delta_v">Total ΔV</string>
    <string name="worst_case">Worst case</string>
    <string name="zeroDV">0 m/s</string>
    <string name="Kerbol">Kerbol</string>
    <string name="Moho">Moho</string>
    <string name="Eve">Eve</string>
    <string name="Kerbin">Kerbin</string>
    <string name="Duna">Duna</string>
    <string name="Dres">Dres</string>
    <string name="Jool">Jool</string>
    <string name="Eeloo">Eeloo</string>
    <string name="Gilly">Gilly</string>
    <string name="Mun">Mün</string>
    <string name="Minmus">Minmus</string>
    <string name="Ike">Ike</string>
    <string name="Laythe">Laythe</string>
    <string name="Vall">Vall</string>
    <string name="Tylo">Tylo</string>
    <string name="Bop">Bop</string>
    <string name="Pol">Pol</string>
    <string name="kerbol_description">Kerbol is the central star of the Kerbol System. It has seven known children: the planets Moho, Eve, Kerbin, Duna and Jool, and two dwarf planets Dres and Eeloo.</string>
    <string name="moho_description">Moho is the innermost planet of the Kerbol star system, and the Mercury analogue for KSP. As of 0.18, it is no longer tidally locked to Kerbol.</string>
    <string name="eve_description">Eve is the second planet from Kerbol, and the Venus analogue for KSP. It has one small moon: a captured asteroid named Gilly.</string>
    <string name="gilly_description">Gilly is a tiny asteroid, the only natural satellite of Eve, and the smallest celestial body in the Kerbol system.</string>
    <string name="kerbin_description">Kerbin is the home planet of the Kerbals, the location of the Space Center, and the Earth analog for KSP. It has two moons, Mun and Minmus.</string>
    <string name="mun_description">Mün is the relatively large moon orbiting closest to Kerbin, an analogue to our own Moon.</string>
    <string name="minmus_description">Minmus is the smaller and more distant moon of Kerbin.</string>
    <string name="duna_description">Duna is the fourth planet from Kerbol, and Mars analogue for KSP. It is mostly red with polar icecaps and has one natural satellite, Ike. Ike\'s size and proximity tidally locks it and Duna to each other. </string>
    <string name="ike_description">Ike is a moon and the only natural satellite of Duna. Ike and Duna are tidally locked due to their proximity and Ike\'s size.</string>
    <string name="dres_description">Dres is a dwarf planet, fifth from Kerbol. It is located between Duna and Jool in a somewhat eccentric and inclined orbit. Dres has the least gravity of any planet in the Kerbol system.</string>
    <string name="jool_description">Jool is a gas giant and the sixth planet from Kerbol, and the Jupiter analog for KSP. Aside from Kerbol, Jool has the largest diameter and greatest mass of all celestial bodies. It has a large and complex system of five moons: Laythe, Vall, Tylo, Bop, and Pol. </string>
    <string name="laythe_description">Laythe is closest moon to Jool. Although mostly covered in seas, Laythe has numerous rocky, sandy islands. Laythe is tidally locked to Jool. </string>
    <string name="vall_description">Vall is Jool\'s second moon. Vall is tidally locked, and an analogue to Jupiter\'s moon Europa. </string>
    <string name="tylo_description">Tylo is Jool\'s third moon. It is the largest moon in KSP, and the largest celestial body without an atmosphere. It is KSP\'s analog for Jupiter\'s moon Ganymede.</string>
    <string name="bop_description">Bop is Jool\'s fourth moon. It is a captured asteroid similar to Gilly. Some of its mountains rise nearly 22 km above the surface, making it dangerous to orbit closely</string>
    <string name="pol_description">Pol is Jool\'s fifth and smallest moon. Pol has the second-lowest surface gravity in the Kerbol system after Gilly.</string>
    <string name="eeloo_description">Eeloo is an icy dwarf planet, furthest from Kerbol. Its orbit intersects Jool\'s, but in a 3:2 resonance, which, coupled with their different inclinations, ensures they cannot collide. It could be considered the Pluto analogue of KSP.</string>
    <string name="version">Kerbal Space App v1.01 \n\nAuthor: Amagi82\n\nI am not affiliated with Kerbal Space Program. I just love KSP and want to give back to the community. If you\'d like to contact me for any reason, click on Feedback.</string>
    <string name="help_clearance">Zero surface clearance assumes a perfect ascent, barely clearing the atmosphere or the tallest mountain. Add surface clearance for a higher orbit. Note that a higher orbit will also increase delta V requirements to reach other planets. Circular orbits are assumed.</string>
    <string name="help_margins">Percentage of extra delta V to account for human error. 0% would be the minimum possible requirements for a perfect maneuver. Recommend 20% for typical missions.</string>
    <string name="help_inclination">Best case situation, inclination changes are handled through aerobraking, or if that isn\'t possible, using a polar orbit to change inclination from the body with the highest orbit. Perfection is not possible unless the planet intersects the ascending or descending node.</string>
    <string-array name="titles">
        <item>Orbital Characteristics</item>
        <item>Physical Characteristics</item>
        <item>Atmospheric Characteristics</item>
        <item>Science Multipliers</item>
        <item>Delta-V</item>
        <item>Departure Phase Angles</item>
    </string-array>
    <string-array name="orbital_categories">
        <item>Semi-major axis</item>
        <item>Apoapsis</item>
        <item>Periapsis</item>
        <item>Orbital eccentricity</item>
        <item>Orbital inclination</item>
        <item>Argument of periapsis</item>
        <item>Longitude of the ascending node</item>
        <item>Mean anomaly</item>
        <item>Sidereal orbital period</item>
        <item>Synodic orbital period</item>
        <item>Orbital Velocity</item>
    </string-array>
    <string-array name="orbital_descriptions">
        <item>Semi-major axis is the average of the apoapsis and periapsis, and can be used to calculate the orbital period.</item>
        <item>Apoapsis is the highest point in an orbit from the parent body.</item>
        <item>Periapsis is the lowest point in an orbit from the parent body.</item>
        <item>Orbital eccentricity is how close the orbit is to a perfect circle. 0 is circular, 1 is a parabolic escape orbit, and >1 is a hyperbola.</item>
        <item>Orbital inclination is the angle between the orbit\'s plane and the equatorial plane of the parent body. 0° is the same plane, 90° is a polar orbit, and 180° is a retrograde equatorial orbit.</item>
        <item>Argument of periapsis is the angle between the periapsis and the ascending node, measured in the orbital plane in the direction of motion.</item>
        <item>Longitude of the ascending node is the angle from a reference direction, called the origin of longitude, to the direction of the ascending node, measured in a reference plane.</item>
        <item>Mean anomaly</item>
        <item>Sidereal orbital period is one full year, from a reference point of the stars. </item>
        <item>Synodic orbital period</item>
        <item>Orbital Velocity</item>
    </string-array>
    <string-array name="physical_categories">
        <item>Equatorial radius</item>
        <item>Surface area</item>
        <item>Mass</item>
        <item>Standard gravitational parameter</item>
        <item>Density</item>
        <item>Surface gravity</item>
        <item>Escape velocity</item>
        <item>Sidereal rotation period</item>
        <item>Solar day</item>
        <item>Sidereal rotation velocity</item>
        <item>Synchronous orbit</item>
        <item>Sphere of influence</item>
        <item>Highest Elevation</item>
    </string-array>
    <string-array name="atmosphere_categories">
        <item>Atmospheric pressure</item>
        <item>Scale height</item>
        <item>Atmospheric height</item>
        <item>Temperature min</item>
        <item>Temperature max</item>
        <item>Oxygen present</item>
    </string-array>
    <string-array name="science_multiplier">
        <item>Surface</item>
        <item>Atmospheric</item>
        <item>Space</item>
    </string-array>
    <string-array name="delta_v">
        <item>To reach orbit</item>
        <item>Moho</item>
        <item>Eve</item>
        <item>Gilly</item>
        <item>Kerbin</item>
        <item>Mun</item>
        <item>Minmus</item>
        <item>Duna</item>
        <item>Ike</item>
        <item>Dres</item>
        <item>Jool</item>
        <item>Laythe</item>
        <item>Vall</item>
        <item>Tylo</item>
        <item>Bop</item>
        <item>Pol</item>
        <item>Eeloo</item>
    </string-array>
    <string-array name="departure_windows_planets">
        <item>Moho</item>
        <item>Eve</item>
        <item>Kerbin</item>
        <item>Duna</item>
        <item>Dres</item>
        <item>Jool</item>
        <item>Eeloo</item>
    </string-array>
    <string-array name="departure_windows_jool">
        <item>Laythe</item>
        <item>Vall</item>
        <item>Tylo</item>
        <item>Bop</item>
        <item>Pol</item>
    </string-array>
    <string-array name="bodies">
        <item>Moho</item>
        <item>Eve</item>
        <item>Gilly</item>
        <item>Kerbin</item>
        <item>Mun</item>
        <item>Minmus</item>
        <item>Duna</item>
        <item>Ike</item>
        <item>Dres</item>
        <item>Jool</item>
        <item>Laythe</item>
        <item>Vall</item>
        <item>Tylo</item>
        <item>Bop</item>
        <item>Pol</item>
        <item>Eeloo</item>
    </string-array>
    <string-array name="help_descriptions">
        <item>Surface Clearance</item>
        <item>Delta V Safety Margins</item>
        <item>Inclination Efficiency</item>
    </string-array>
    <string-array name="icon_descriptions">
        <item>Land and take off</item>
        <item>Land</item>
        <item>Orbit</item>
        <item>Take off</item>
    </string-array>
</resources>