<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         The drawer is given a fixed width in dp and extends the full height of
         the container. A solid background is used for contrast
         with the content view. -->
    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#111"/>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true" >

	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="#000000" >
	
	    <ImageView
	        android:id="@+id/imageButtonKerbol"
	        android:layout_width="85dp"
	        android:layout_height="104dp"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:src="@drawable/kerbol"
	        android:contentDescription="@string/Kerbol"
	        android:layout_marginTop="-10px"
	        android:layout_marginBottom="-10px"
	        android:onClick="goKerbol" />
	
	    <ImageView
	        android:id="@+id/imageButtonMoho"
	        android:layout_width="85dp"
	        android:layout_height="104dp"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/imageButtonKerbol"
	        android:src="@drawable/moho"
	        android:contentDescription="@string/Moho"
	        android:layout_marginTop="-10px"
	        android:layout_marginBottom="-10px" 
	        android:onClick="goMoho"/>

	    <ImageView
	        android:id="@+id/imageButtonEve"
	        android:layout_width="85dp"
	        android:layout_height="104dp"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/imageButtonMoho"
	        android:src="@drawable/eve"
	        android:contentDescription="@string/Eve"
	        android:layout_marginTop="-10px"
	        android:layout_marginBottom="-10px"
	        android:onClick="goEve" />
	
	    <ImageView
	        android:id="@+id/imageButtonGilly"
	        android:layout_width="55dp"
	        android:layout_height="67dp"
	        android:layout_alignBottom="@+id/imageButtonEve"
	        android:layout_toRightOf="@+id/imageButtonEve"
	        android:contentDescription="@string/Gilly"
	        android:scaleType="fitCenter"
	        android:src="@drawable/gilly"
	        android:onClick="goGilly" />
	
	    <ImageView
	        android:id="@+id/imageButtonKerbin"
	        android:layout_width="85dp"
	        android:layout_height="104dp"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/imageButtonEve"
	        android:src="@drawable/kerbin"
	        android:contentDescription="@string/Kerbin"
	        android:layout_marginTop="-10px"
	        android:layout_marginBottom="-10px"
	        android:onClick="goKerbin" />

	    <ImageView
	        android:id="@+id/imageButtonMun"
	        android:layout_width="55dp"
	        android:layout_height="67dp"
	        android:layout_toRightOf="@+id/imageButtonKerbin"
	        android:layout_alignBottom="@+id/imageButtonKerbin"
	        android:src="@drawable/mun"
	        android:scaleType="fitCenter"
	        android:contentDescription="@string/Mun" 
	        android:onClick="goMun"/>
	    <ImageView
	        android:id="@+id/imageButtonMinmus"
	        android:layout_width="55dp"
	        android:layout_height="67dp"
	        android:layout_toRightOf="@+id/imageButtonMun"
	        android:layout_alignBottom="@+id/imageButtonKerbin"
	        android:src="@drawable/minmus"
	        android:scaleType="fitCenter"
	        android:contentDescription="@string/Minmus"
	        android:onClick="goMinmus" />
	    <ImageView
	        android:id="@+id/imageButtonDuna"
	        android:layout_width="85dp"
	        android:layout_height="104dp"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/imageButtonKerbin"
	        android:src="@drawable/duna"
	        android:contentDescription="@string/Duna"
	        android:layout_marginTop="-10px"
	        android:layout_marginBottom="-10px" 
	        android:onClick="goDuna" />
	    <ImageView
	        android:id="@+id/imageButtonIke"
	        android:layout_width="55dp"
	        android:layout_height="67dp"
	        android:layout_toRightOf="@+id/imageButtonDuna"
	        android:layout_alignBottom="@+id/imageButtonDuna"
	        android:src="@drawable/ike"
	        android:scaleType="fitCenter"
	        android:contentDescription="@string/Ike"
	        android:onClick="goIke" />
	    <ImageView
	        android:id="@+id/imageButtonDres"
	        android:layout_width="85dp"
	        android:layout_height="104dp"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/imageButtonDuna"
	        android:src="@drawable/dres"
	        android:contentDescription="@string/Dres"
	        android:layout_marginTop="-10px"
	        android:layout_marginBottom="-10px" 
	        android:onClick="goDres" />
	    <ImageView
	        android:id="@+id/imageButtonJool"
	        android:layout_width="85dp"
	        android:layout_height="104dp"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/imageButtonDres"
	        android:src="@drawable/jool" 
	        android:contentDescription="@string/Jool"
	        android:layout_marginTop="-10px"
	        android:layout_marginBottom="-10px"
	        android:onClick="goJool" />
	    <ImageView
	        android:id="@+id/imageButtonLaythe"
	        android:layout_width="55dp"
	        android:layout_height="67dp"
	        android:layout_toRightOf="@+id/imageButtonJool"
	        android:layout_alignBottom="@+id/imageButtonJool"
	        android:src="@drawable/laythe"
	        android:scaleType="fitCenter"
	        android:contentDescription="@string/Laythe"
	        android:onClick="goLaythe" />
	    <ImageView
	        android:id="@+id/imageButtonVall"
	        android:layout_width="55dp"
	        android:layout_height="67dp"
	        android:layout_toRightOf="@+id/imageButtonLaythe"
	        android:layout_alignBottom="@+id/imageButtonJool"
	        android:src="@drawable/vall" 
	        android:scaleType="fitCenter"
	        android:contentDescription="@string/Vall"
	        android:onClick="goVall" />
	    <ImageView
	        android:id="@+id/imageButtonTylo"
	        android:layout_width="55dp"
	        android:layout_height="67dp"
	        android:layout_toRightOf="@+id/imageButtonVall"
	        android:layout_alignBottom="@+id/imageButtonJool"
	        android:src="@drawable/tylo"
	        android:scaleType="fitCenter"
	        android:contentDescription="@string/Tylo"
	        android:onClick="goTylo" />
	    <ImageView
	        android:id="@+id/imageButtonBop"
	        android:layout_width="55dp"
	        android:layout_height="67dp"
	        android:layout_toRightOf="@+id/imageButtonTylo"
	        android:layout_alignBottom="@+id/imageButtonJool"
	        android:src="@drawable/bop"
	        android:scaleType="fitCenter"
	        android:contentDescription="@string/Bop"
	        android:onClick="goBop" />
	    <ImageView
	        android:id="@+id/imageButtonPol"
	        android:layout_width="55dp"
	        android:layout_height="67dp"
	        android:layout_toRightOf="@+id/imageButtonBop"
	        android:layout_alignBottom="@+id/imageButtonJool"
	        android:src="@drawable/pol"
	        android:scaleType="fitCenter"
	        android:contentDescription="@string/Pol"
	        android:onClick="goPol" />
	    <ImageView
	        android:id="@+id/imageButtonEeloo"
	        android:layout_width="85dp"
	        android:layout_height="104dp"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/imageButtonJool"
	        android:src="@drawable/eeloo"
	        android:contentDescription="@string/Eeloo"
	        android:layout_marginTop="-10px"
	        android:layout_marginBottom="-10px"
	        android:onClick="goEeloo" />

	</RelativeLayout>

</ScrollView>
</android.support.v4.widget.DrawerLayout>